--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "beego_project1"]
 	path = beego_project1
-	url = https://github.com/vishnu1209/beego
+	url = https://github.com/vishnu1209/beego_fbpost
