--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,9 @@
-appname = go-crud-beego-api
+appname = awesomeProject
 httpport = 8080
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+SessionOn = true
+
+
